Using userDTO class to return object of client data